--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,8 @@ a {
 }
 
 .info-bottom img {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -108,10 +108,12 @@ a {
 }
 
 .image-block {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    gap: 10px;
 }
 
 .info-top {
