--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@
     color: #F9FAF8;
 }
 
-button {
+.button-1 {
     max-width: 130px;
     background-color: #3882F6;
     color: #F9FAF8;
@@ -116,8 +116,78 @@ a {
     gap: 10px;
 }
 
+.image-block img {
+    border-radius: 10px;
+    border: 2px solid #3882F6;
+}
+
 .info-top {
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+}
+
+.quotation {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px 250px;
+    gap: 20px;
+}
+
+.quotes {
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.speaker {
+    font-size: large;
+    font-weight: 900;
+    color: black;
+    align-self: flex-end;
+    padding-right: 20px;
+}
+
+.action {
+    padding: 50px 200px;
+}
+
+.action-box {
+    display: flex;
+    background-color: #3882F6;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 80px;
+    border-radius: 5px;
+}
+
+.button-2 {
+    max-width: 130px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-weight: bold;
+    padding: 10px 40px;
+    border-radius: 10px;
+    border: 2px solid #F9FAF8;
+}
+
+.call-main {
+    color: #F9FAF8;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.call-subtext {
+    color: #F9FAF8;
+    font-size: 18px;
+}
+
+.footer {
+    text-align: center;
+    font-size: 16px;
+    color: #E5E7EB;
+    padding: 25px;
 }
