--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 * {
-    font-family: 'Roboto', 'Times New Roman', Times, serif;
+    font-family: Roboto, sans-serif;
+}
+
+body {
+    margin: 0px;
 }
 
 .header, .footer {
@@ -17,11 +21,20 @@
     display: flex;
     padding: 80px 0;
     gap: 10px;
+    align-items: center;
 }
 
 .header-bottom-left, .image-placeholder {
     width: 300px;
     flex: 1 1 auto;
+}
+
+.content-text {
+    width: 300px;
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .header-bottom-left {
@@ -36,6 +49,28 @@
     font-weight: 900;
 }
 
+.content1-main {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.content1-sub {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.content2-main {
+    font-size: 48px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.content2-sub {
+    font-size: 18px;
+    color: #1F2900;
+}
+
 .subtext, .header-links {
     font-size: 18px;
     color: #E5E7EB;
@@ -48,7 +83,7 @@
 }
 
 .button-1 {
-    max-width: 130px;
+    max-width: 200px;
     background-color: #3882F6;
     color: #F9FAF8;
     font-weight: bold;
@@ -132,7 +167,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 250px;
+    padding: 20px 250px;
     gap: 20px;
 }
 
@@ -152,7 +187,7 @@ a {
 }
 
 .action {
-    padding: 50px 200px;
+    padding: 20px 200px;
 }
 
 .action-box {
@@ -190,4 +225,45 @@ a {
     font-size: 16px;
     color: #E5E7EB;
     padding: 25px;
+}
+
+.content-1 {
+    background-color: #1F2937;
+    padding: 20px 200px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.content-2 {
+    background-color: #F9FAF8;
+    padding: 20px 200px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.content-title {
+    background-color: #1F2937;
+    padding: 20px 200px;
+    flex-direction: column;
+    display: flex;
+    gap: 10px;
+    text-align: center;
+}
+
+.numbers {
+    font-weight: bold;
+    font-size: 48px;
+    color: #1F2937;
+}
+
+.header-img {
+    width: 100vw;
+    height: 300px;
+    object-fit: cover;
+    object-position: 50% 15%;
+    display: block;
+    margin: 0;
+    padding: 0;
 }
