Add photos of day 1

--- a/styles.css
+++ b/styles.css
@@ -267,3 +267,23 @@ a {
     margin: 0;
     padding: 0;
 }
+
+.jetlag-pic {
+    display: flex;
+    gap: 10px;
+}
+
+.jetlag-pic img {
+    max-height: 200px;
+    object-fit: cover;
+    border: #F9FAF8 solid 2px;
+    border-radius: 5px;
+}
+
+.day1-top {
+    background-color: #1F2937;
+    padding: 20px 200px;
+    display: flex;
+    gap: 10px;
+    align-items: start;
+}
