--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,8 @@ a {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border: #F9FAF8 solid 2px;
+    border-radius: 5px;
 }
 
 .info-bottom {
@@ -327,11 +329,14 @@ a {
     margin: 0px;
 }
 
-.kamakura-spots {
+.kamakura-spots, .sunset-pic, .drunk-pic {
     display: flex;
-    flex-wrap: wrap;
-    max-width: 50%;
     gap: 10px;
+}
+
+.kamakura-spots {
+    max-width: 50%;
+    flex-wrap: wrap;
 }
 
 .kamakura-spots img {
@@ -339,5 +344,21 @@ a {
     aspect-ratio: 3/4;
     object-fit: cover;
     border: #3882F6 solid 2px;
+    border-radius: 5px;
+}
+
+.sunset-pic img {
+    max-height: 350px;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    border: #F9FAF8 solid 2px;
+    border-radius: 5px;
+}
+
+.drunk-pic img {
+    max-height: 250px;
+    aspect-ratio: 3/4;
+    object-fit: cover;
+    border: #F9FAF8 solid 2px;
     border-radius: 5px;
 }
