Write content for day 3

--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,7 @@ a {
     display: flex;
     gap: 10px;
     align-items: center;
+    justify-content: space-between;
 }
 
 .content-2 {
@@ -399,7 +400,7 @@ a {
     border-radius: 5px;
 }
 
-.fireworks {
+.fireworks, .godzilla {
     background-color: #1F2937;
     padding: 20px 200px;
     display: flex;
@@ -409,10 +410,17 @@ a {
 
 .fireworks img {
     height: 250px;
-    flex: 1 1 0;
+    flex: 1 1 auto;
     aspect-ratio: 3/4;
     object-fit: cover;
     border: #F9FAF8 solid 2px;
     border-radius: 5px;
 }
 
+.godzilla img {
+    height: 200px;
+    flex: 1 1 auto;
+    object-fit: cover;
+    border: #F9FAF8 solid 2px;
+    border-radius: 5px;
+}
